# mallow

./: .env.signing.example  .gitignore  AGENTS.ja.md  AGENTS.md  LICENSE  README.ja.md  README.md  THIRD-PARTY-NOTICES.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/: release.yml
.github/workflows/: release.yml
scripts/: gen-third-party-notices.mjs  macos-sign-build.sh  setup-ci-signing-secrets.sh
src/: App.tsx  main.tsx  shims.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  editors.rs  lib.rs  main.rs  watch.rs
src/components/: ConfigTree.tsx  ConfigView.tsx  Explorer.tsx  FileTree.tsx  MarkdownView.tsx  MediaView.tsx  MermaidView.tsx  OpenWith.tsx  Outline.tsx  SettingsMenu.tsx  SettingsModal.tsx  SourceView.tsx  ThemePicker.tsx  Toolbar.tsx  Viewer.tsx  icons.tsx
src/hooks/: useFileTree.ts
src/lib/: codeblock.ts  config-parse.test.ts  config-parse.ts  config-tree.test.ts  config-tree.ts  file.test.ts  file.ts  frontmatter.test.ts  frontmatter.ts  i18n.tsx  markdown.test.ts  markdown.ts  mermaid-copy.ts  mermaid.ts  path.test.ts  path.ts  scroll.ts  settings.ts  shiki.ts  tauri.ts  theme.ts  title.test.ts  title.ts  types.ts  watch.ts
src/styles/: _vars.scss  app.scss  config.scss  global.scss  markdown.scss  source.scss
