[package]
name = "mallow"
version = "0.1.0"
description = "A lightweight desktop Markdown / config-file viewer (Tauri v2)."
authors = ["Takuya Otani <takuya.otani@serenebach.net>"]
license = "MIT"
repository = "https://github.com/takkyun/mallow"
homepage = "https://github.com/takkyun/mallow"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mallow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"

